--- a/index.html
+++ b/index.html
@@ -62,26 +62,26 @@
                 </h2>
                 <ul class="subsystems__list">
                     <li class="subsystems__item">
-                        <img class="subsystems__img" src="images/subsystem-item1.png" alt="subsystem-img1">
-                        <span class="subsystems__img-title">
+                        <img class="subsystems__img subsystems__img1" src="images/subsystem-item1.png" alt="subsystem-img1">
+                        <span class="subsystems__img-title subsystems__img-title1">
                             track hours
                         </span>
                     </li>
                     <li class="subsystems__item">
-                        <img class="subsystems__img" src="images/subsystem-item2.png" alt="subsystem-img2">
-                        <span class="subsystems__img-title">
+                        <img class="subsystems__img subsystems__img2" src="images/subsystem-item2.png" alt="subsystem-img2">
+                        <span class="subsystems__img-title subsystems__img-title2">
                             print/deposit paychecks
                         </span>
                     </li>
                     <li class="subsystems__item">
-                        <img class="subsystems__img" src="images/subsystem-item3.png" alt="subsystem-img3">
-                        <span class="subsystems__img-title">
+                        <img class="subsystems__img subsystems__img3" src="images/subsystem-item3.png" alt="subsystem-img3">
+                        <span class="subsystems__img-title subsystems__img-title3">
                             calculate wages
                         </span>
                     </li>
                     <li class="subsystems__item">
-                        <img class="subsystems__img" src="images/subsystem-item4.png" alt="subsystem-img4">
-                        <span class="subsystems__img-title">
+                        <img class="subsystems__img subsystems__img4" src="images/subsystem-item4.png" alt="subsystem-img4">
+                        <span class="subsystems__img-title subsystems__img-title4">
                             withold required taxes
                         </span>
                     </li>
@@ -89,5 +89,50 @@
             </div>
         </div>
     </section>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__inner">
+                <div class="footer__tools">
+                    <h4 class="footer__tools-title">this project is created with:</h4>
+                    <div class="footer__tools-images">
+                        <img class="footer__tools-image" src="images/laravel.png" alt="laravel">
+                        <img class="footer__tools-image" src="images/react.png" alt="react">
+                        <img class="footer__tools-image" src="images/mysql.png" alt="mysql">
+                        <img class="footer__tools-image" src="images/figma.png" alt="figma">
+                        <img class="footer__tools-image" src="images/css.png" alt="css">
+                        <img class="footer__tools-image" src="images/html.png" alt="html">
+                    </div>
+                </div>
+                <div class="footer__contacts">
+                    <h4 class="footer__contacts-title">
+                        contact us:
+                    </h4>
+                    <ul class="footer__contacts-links">
+                        <li class="footer__link">
+                            <img class="footer__link-img" src="images/twitter.png" alt="twitter">
+                            <span class="footer__link-text">
+                                https://www.twitter.com/CotabatoCityLGU/
+                            </span>
+                        </li>
+                        <li class="footer__link">
+                            <img class="footer__link-img" src="images/facebook.png" alt="facebook">
+                            <span class="footer__link-text">
+                                https://www.facebook.com/CotabatoCityLGU/
+                            </span>
+                        </li>
+                        <li class="footer__link">
+                            <img class="footer__link-img" src="images/email.png" alt="email">
+                            <span class="footer__link-text">
+                                cotabatocity.lgu@gmail.com
+                            </span>
+                        </li>
+                    </ul>
+                </div>
+                <img class="footer__person" src="images/person.png" alt="person">
+            </div>
+        </div>
+    </footer>
+
 </body>
 </html>
